// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Notifications > should render with transactions in lg 1`] = `
<div>
  <div>
    <div
      aria-controls="«r9»"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="custom-button-nav-wrapper group"
      >
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700 dim:text-theme-dim-200 dim-hover:text-theme-dim-50"
          data-testid="NavigationBar__buttons--notifications"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="m-0 p-1"
            >
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="bell"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M8.4 17.8c.3.9 1.2 1.4 2.1 1.1.5-.2 1-.6 1.1-1.1M10 2.8V1M10 2.8c3.3 0 6 2.7 6 6h0c0 5.6 1.2 6.6 1.2 6.6H2.8S4 13.9 4 8.8c0-3.3 2.7-6 6-6z"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications > should render with transactions in md 1`] = `
<div>
  <div>
    <div
      aria-controls="«r6»"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="custom-button-nav-wrapper group"
      >
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700 dim:text-theme-dim-200 dim-hover:text-theme-dim-50"
          data-testid="NavigationBar__buttons--notifications"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="m-0 p-1"
            >
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="bell"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M8.4 17.8c.3.9 1.2 1.4 2.1 1.1.5-.2 1-.6 1.1-1.1M10 2.8V1M10 2.8c3.3 0 6 2.7 6 6h0c0 5.6 1.2 6.6 1.2 6.6H2.8S4 13.9 4 8.8c0-3.3 2.7-6 6-6z"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications > should render with transactions in sm 1`] = `
<div>
  <div>
    <div
      aria-controls="«r3»"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="custom-button-nav-wrapper group"
      >
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700 dim:text-theme-dim-200 dim-hover:text-theme-dim-50"
          data-testid="NavigationBar__buttons--notifications"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="m-0 p-1"
            >
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="bell"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M8.4 17.8c.3.9 1.2 1.4 2.1 1.1.5-.2 1-.6 1.1-1.1M10 2.8V1M10 2.8c3.3 0 6 2.7 6 6h0c0 5.6 1.2 6.6 1.2 6.6H2.8S4 13.9 4 8.8c0-3.3 2.7-6 6-6z"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications > should render with transactions in xl 1`] = `
<div>
  <div>
    <div
      aria-controls="«rc»"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="custom-button-nav-wrapper group"
      >
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700 dim:text-theme-dim-200 dim-hover:text-theme-dim-50"
          data-testid="NavigationBar__buttons--notifications"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="m-0 p-1"
            >
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="bell"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M8.4 17.8c.3.9 1.2 1.4 2.1 1.1.5-.2 1-.6 1.1-1.1M10 2.8V1M10 2.8c3.3 0 6 2.7 6 6h0c0 5.6 1.2 6.6 1.2 6.6H2.8S4 13.9 4 8.8c0-3.3 2.7-6 6-6z"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications > should render with transactions in xs 1`] = `
<div>
  <div>
    <div
      aria-controls="«r0»"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="custom-button-nav-wrapper group"
      >
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700 dim:text-theme-dim-200 dim-hover:text-theme-dim-50"
          data-testid="NavigationBar__buttons--notifications"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="m-0 p-1"
            >
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="bell"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M8.4 17.8c.3.9 1.2 1.4 2.1 1.1.5-.2 1-.6 1.1-1.1M10 2.8V1M10 2.8c3.3 0 6 2.7 6 6h0c0 5.6 1.2 6.6 1.2 6.6H2.8S4 13.9 4 8.8c0-3.3 2.7-6 6-6z"
                    />
                  </g>
                </svg>
              </div>
            </div>
            <div
              class="bg-theme-background group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800 absolute top-0 right-0 flex items-center justify-center rounded-full p-0.5 transition-all duration-100 ease-linear"
            >
              <div
                class="bg-theme-danger-500 h-1.5 w-1.5 rounded-full"
              />
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
